--- a/public/act1/visual-network-thinger/index.html
+++ b/public/act1/visual-network-thinger/index.html
@@ -35,26 +35,26 @@ You know, I think Santa is right! It truly is better to give than to receive.">
     <meta itemprop="wordCount" content="185">
     <title>Visual Network Thinger :: SANS Holiday Hack Challenge 2025</title>
     <link href="/act1/visual-network-thinger/index.xml" rel="alternate" type="application/rss+xml" title="Visual Network Thinger :: SANS Holiday Hack Challenge 2025">
-    <link href="/css/auto-complete/auto-complete.min.css?1763889481" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1763889481" defer></script>
-    <script src="/js/search-lunr.js?1763889481" defer></script>
-    <script src="/js/search.js?1763889481" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1763892000" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1763892000" defer></script>
+    <script src="/js/search-lunr.js?1763892000" defer></script>
+    <script src="/js/search.js?1763892000" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1763889481";
+      window.relearn.index_js_url="/searchindex.en.js?1763892000";
     </script>
-    <script src="/js/lunr/lunr.min.js?1763889481" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1763889481" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1763889481" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1763889481" defer></script>
+    <script src="/js/lunr/lunr.min.js?1763892000" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1763892000" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1763892000" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1763892000" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763889481" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763889481" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763889481" rel="stylesheet">
-    <link href="/css/theme.css?1763889481" rel="stylesheet">
-    <link href="/css/format-html.css?1763889481" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763892000" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1763892000" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1763892000" rel="stylesheet">
+    <link href="/css/theme.css?1763892000" rel="stylesheet">
+    <link href="/css/format-html.css?1763892000" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -142,7 +142,7 @@ You know, I think Santa is right! It truly is better to give than to receive.">
 <span class="btn cstyle link noborder notitle interactive"><a href="/act1/santas-gift-tracking-service-port-mystery/index.html" title="Santa's Gift Tracking Service Port Mystery (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle interactive"><a href="/act1/intro-to-nmap/index.html" title="Intro to Nmap (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/act1/visual-firewall-thinger/index.html" title="Visual Firewall Thinger (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-more" data-content-empty="hide" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle interactive"><button onclick="toggleTopbarFlyout(this)" type="button" title="More"><i class="fa-fw fas fa-ellipsis-v"></i></button></span>
@@ -165,8 +165,8 @@ You know, I think Santa is right! It truly is better to give than to receive.">
 
 <h1 id="visual-network-thinger">Visual Network Thinger</h1>
 
-<p><a href="#R-image-44e31ab3038c5b4be2e7a069cca1c25e" class="lightbox-link"><img alt="Jared Folkins" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/jaredfolkins-portrait.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-44e31ab3038c5b4be2e7a069cca1c25e"><img alt="Jared Folkins" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/jaredfolkins-portrait.png"></a></p>
+<p><a href="#R-image-f2957e575883cf057709e4d592bd9a19" class="lightbox-link"><img alt="Jared Folkins" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/jaredfolkins-portrait.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f2957e575883cf057709e4d592bd9a19"><img alt="Jared Folkins" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/jaredfolkins-portrait.png"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Skate over to Jared at the frozen pond for some network magic and learn the ropes by the hockey rink.</p>
@@ -181,8 +181,8 @@ You know, I think Santa is right! It truly is better to give than to receive.">
 <p>Want to dive into some hands-on network exploration?</p>
 </blockquote>
 <h2 id="solution">Solution</h2>
-<p><a href="#R-image-36689cb4f4f042c6ebf43454bd33f5b2" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-36689cb4f4f042c6ebf43454bd33f5b2"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png"></a></p>
+<p><a href="#R-image-19a2d36c9d477bc7e1527791a7d80b38" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-19a2d36c9d477bc7e1527791a7d80b38"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png"></a></p>
 <h2 id="jared-folkins-mission-debrief">Jared Folkins mission debrief</h2>
 <blockquote>
 <p>Wonderful! You&rsquo;ve mastered those networking basics beautifully.</p>
@@ -242,6 +242,7 @@ You know, I think Santa is right! It truly is better to give than to receive.">
             <li class="" data-nav-url="/act1/neighborhood-watch-bypass/index.html"><a class="padding" href="/act1/neighborhood-watch-bypass/index.html">Neighborhood Watch Bypass</a></li>
             <li class="" data-nav-url="/act1/santas-gift-tracking-service-port-mystery/index.html"><a class="padding" href="/act1/santas-gift-tracking-service-port-mystery/index.html">Santa&#39;s Gift Tracking Service Port Mystery</a></li>
             <li class="active " data-nav-url="/act1/visual-network-thinger/index.html"><a class="padding" href="/act1/visual-network-thinger/index.html">Visual Network Thinger</a></li>
+            <li class="" data-nav-url="/act1/visual-firewall-thinger/index.html"><a class="padding" href="/act1/visual-firewall-thinger/index.html">Visual Firewall Thinger</a></li>
             <li class="" data-nav-url="/act1/intro-to-nmap/index.html"><a class="padding" href="/act1/intro-to-nmap/index.html">Intro to Nmap</a></li>
             <li class="" data-nav-url="/act1/blob-storage-challenge-in-the-neighborhood/index.html"><a class="padding" href="/act1/blob-storage-challenge-in-the-neighborhood/index.html">Blob Storage Challenge in the Neighborhood</a></li>
             <li class="" data-nav-url="/act1/spare-key/index.html"><a class="padding" href="/act1/spare-key/index.html">Spare Key</a></li>
@@ -265,8 +266,8 @@ You know, I think Santa is right! It truly is better to give than to receive.">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1763889481" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763889481" defer></script>
-    <script src="/js/theme.js?1763889481" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1763892000" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1763892000" defer></script>
+    <script src="/js/theme.js?1763892000" defer></script>
   </body>
 </html>
